--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/SMelanko/Victoria#readme",
   "dependencies": {
+    "ejs": "^2.6.1",
     "express": "^4.17.0"
   }
 }
