--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.17.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-nodemon": "^2.4.2"
   }
 }
