--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "victoria",
   "version": "1.0.0",
   "description": "test project",
-  "main": "main.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node main.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
